--- a/package.json
+++ b/package.json
@@ -1,39 +1,52 @@
 {
-  "name": "react-material-ui",
-  "version": "0.1.0",
-  "private": true,
+  "name": "webpack-react-tutorial",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "build": "webpack --mode production",
+    "start": "webpack-dev-server"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "@babel/core": "^7.11.1",
+    "@babel/plugin-external-helpers": "^7.2.0",
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "@babel/plugin-transform-runtime": "^7.4.4",
+    "@babel/preset-env": "^7.11.0",
+    "@babel/preset-react": "^7.10.4",
+    "babel-loader": "^8.1.0",
+    "html-loader": "^1.2.1",
+    "html-webpack-plugin": "^4.3.0",
+    "kw-web-suite": "8.0.0",
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12"
+  },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/data-grid": "^4.0.0-alpha.6",
     "@material-ui/icons": "^4.9.1",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "contentful": "^7.14.6",
+    "cornerstone-core": "^2.3.0",
+    "cornerstone-math": "^0.1.8",
+    "cornerstone-tools": "^4.21.0",
+    "cornerstone-wado-image-loader": "^3.1.2",
+    "dicom-parser": "^1.8.5",
+    "dicomweb-client": "^0.6.0",
+    "gl-matrix": "3.0.0",
+    "hammerjs": "^2.0.8",
+    "lodash": "^4.17.20",
     "material-ui-search-bar": "^1.0.0",
+    "monologue.js": "^0.3.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "react-router-dom": "^5.2.0",
+    "react-vtkjs-viewport": "^0.10.4",
+    "shader-loader": "^1.3.1",
+    "vtk.js": "^11.14.0",
+    "webpack-dev-server": "^3.11.0",
+    "worker-loader": "^2.0.0",
+    "wslink": "^0.1.15"
   }
 }
