--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-vtkjs-viewport": "^0.10.4",
+    "sass": "^1.27.0",
+    "sass-loader": "^10.0.3",
     "shader-loader": "^1.3.1",
     "vtk.js": "^11.14.0",
     "webpack-dev-server": "^3.11.0",
