--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "webpack-react-tutorial",
-  "version": "1.0.0",
+  "name": "dicomweb-frontend",
+  "version": "0.1.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -17,7 +17,9 @@
     "@babel/plugin-transform-runtime": "^7.4.4",
     "@babel/preset-env": "^7.11.0",
     "@babel/preset-react": "^7.10.4",
+    "@octokit/core": "^3.2.5",
     "babel-loader": "^8.1.0",
+    "eslint-plugin-import": "^2.22.1",
     "html-loader": "^1.2.1",
     "html-webpack-plugin": "^4.3.0",
     "kw-web-suite": "8.0.0",
@@ -31,7 +33,7 @@
     "cornerstone-core": "^2.3.0",
     "cornerstone-math": "^0.1.8",
     "cornerstone-tools": "^4.21.0",
-    "cornerstone-wado-image-loader": "^3.1.2",
+    "cornerstone-wado-image-loader": "^3.0.6",
     "dicom-parser": "^1.8.5",
     "dicomweb-client": "^0.6.0",
     "gl-matrix": "3.0.0",
