--- a/package.json
+++ b/package.json
@@ -1,57 +1,61 @@
 {
   "name": "dicomweb-frontend",
   "version": "0.1.0",
+  "repository": "knopkem/react-vtkjs-viewport",
   "description": "",
   "main": "index.js",
   "scripts": {
     "build": "webpack --mode production",
-    "start": "webpack-dev-server"
+    "start": "webpack serve"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.11.1",
-    "@babel/plugin-external-helpers": "^7.2.0",
-    "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "@babel/plugin-transform-runtime": "^7.4.4",
-    "@babel/preset-env": "^7.11.0",
-    "@babel/preset-react": "^7.10.4",
+    "@babel/core": "^7.12.10",
+    "@babel/plugin-external-helpers": "^7.12.1",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/plugin-transform-runtime": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "@babel/preset-react": "^7.12.10",
     "@octokit/core": "^3.2.5",
-    "babel-loader": "^8.1.0",
+    "babel-loader": "^8.2.2",
     "eslint-plugin-import": "^2.22.1",
-    "html-loader": "^1.2.1",
-    "html-webpack-plugin": "^4.3.0",
-    "kw-web-suite": "8.0.0",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12"
+    "html-loader": "^1.3.2",
+    "html-webpack-plugin": "^4.5.1",
+    "kw-web-suite": "11.1.0",
+    "process": "^0.11.10",
+    "webpack": "^5.19.0",
+    "webpack-cli": "^4.4.0",
+    "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/data-grid": "^4.0.0-alpha.6",
-    "@material-ui/icons": "^4.9.1",
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/data-grid": "^4.0.0-alpha.18",
+    "@material-ui/icons": "^4.11.2",
+    "autoprefixer": "^10.2.4",
     "cornerstone-core": "^2.3.0",
-    "cornerstone-math": "^0.1.8",
-    "cornerstone-tools": "^4.21.0",
+    "cornerstone-math": "^0.1.9",
+    "cornerstone-tools": "^5.1.3",
     "cornerstone-wado-image-loader": "^3.3.1",
-    "dicom-parser": "^1.8.5",
+    "dicom-parser": "^1.8.7",
     "dicomweb-client": "^0.6.0",
-    "gl-matrix": "3.0.0",
+    "gl-matrix": "3.3.0",
     "hammerjs": "^2.0.8",
     "lodash": "^4.17.20",
     "material-ui-search-bar": "^1.0.0",
     "monologue.js": "^0.3.5",
-    "react": "^16.13.1",
+    "postcss": "^8.2.4",
+    "react": "^17.0.1",
     "react-cornerstone-viewport": "^4.0.4",
-    "react-dom": "^16.13.1",
+    "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
-    "react-vtkjs-viewport": "^0.10.4",
-    "sass": "^1.27.0",
-    "sass-loader": "^10.0.3",
+    "react-vtkjs-viewport": "git+https://github.com/knopkem/react-vtkjs-viewport.git",
+    "sass": "^1.32.5",
+    "sass-loader": "^10.1.1",
     "shader-loader": "^1.3.1",
-    "vtk.js": "^11.14.0",
-    "webpack-dev-server": "^3.11.0",
-    "worker-loader": "^2.0.0",
+    "vtk.js": "^16.1.8",
+    "worker-loader": "^3.0.7",
     "wslink": "^0.1.15"
   }
 }
