--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.11.3",
-    "@material-ui/data-grid": "^4.0.0-alpha.18",
+    "@material-ui/data-grid": "4.0.0-alpha.18",
     "@material-ui/icons": "^4.11.2",
     "autoprefixer": "^10.2.4",
     "cornerstone-core": "^2.3.0",
@@ -41,9 +41,7 @@
     "dicomweb-client": "^0.6.0",
     "gl-matrix": "3.3.0",
     "hammerjs": "^2.0.8",
-    "lodash": "^4.17.20",
     "material-ui-search-bar": "^1.0.0",
-    "monologue.js": "^0.3.5",
     "postcss": "^8.2.4",
     "react": "^17.0.1",
     "react-cornerstone-viewport": "^4.0.4",
