--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@material-ui/core": "^4.11.3",
     "@material-ui/data-grid": "4.0.0-alpha.18",
     "@material-ui/icons": "^4.11.2",
+    "@sentry/react": "^6.2.5",
+    "@sentry/tracing": "^6.2.5",
     "autoprefixer": "^10.2.5",
     "cornerstone-core": "^2.3.0",
     "cornerstone-math": "^0.1.9",
