--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react": "^17.0.2",
     "react-cornerstone-viewport": "^4.0.5",
     "react-dom": "^17.0.2",
+    "react-query": "^3.13.6",
     "react-router-dom": "^5.2.0",
     "react-vtkjs-viewport": "git+https://github.com/knopkem/react-vtkjs-viewport.git",
     "sass": "^1.32.8",
