--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@octokit/core": "^3.4.0",
     "babel-loader": "^8.2.2",
     "eslint-plugin-import": "^2.22.1",
+    "file-loader": "^6.2.0",
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.1",
     "process": "^0.11.10",
@@ -29,9 +30,10 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
-    "@material-ui/core": "^4.12.1",
-    "@material-ui/data-grid": "4.0.0-alpha.18",
+    "@fontsource/roboto": "^4.5.0",
+    "@material-ui/core": "^4.12.0",
     "@material-ui/icons": "^4.11.2",
+    "@mui/x-data-grid": "^4.0.0",
     "autoprefixer": "^10.2.6",
     "cornerstone-core": "^2.3.0",
     "cornerstone-math": "^0.1.9",
@@ -41,7 +43,6 @@
     "dicomweb-client": "^0.8.2",
     "gl-matrix": "3.3.0",
     "hammerjs": "^2.0.8",
-    "material-ui-search-bar": "^1.0.0",
     "postcss": "^8.3.5",
     "react": "^17.0.2",
     "react-cornerstone-viewport": "^4.1.0",
