--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@babel/preset-react": "^7.13.13",
     "@octokit/core": "^3.4.0",
     "babel-loader": "^8.2.2",
+    "css-loader": "^6.3.0",
     "eslint-plugin-import": "^2.22.1",
     "file-loader": "^6.2.0",
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.1",
     "process": "^0.11.10",
+    "style-loader": "^3.3.0",
     "webpack": "^5.31.2",
     "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^3.11.2"
@@ -43,14 +45,12 @@
     "dicomweb-client": "^0.8.2",
     "gl-matrix": "3.3.0",
     "hammerjs": "^2.0.8",
-    "postcss": "^8.3.5",
+    "normalize.css": "^8.0.1",
     "react": "^17.0.2",
     "react-cornerstone-viewport": "^4.1.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-vtkjs-viewport": "git+https://github.com/knopkem/react-vtkjs-viewport.git",
-    "sass": "^1.35.2",
-    "sass-loader": "^11.0.1",
     "shader-loader": "^1.3.1",
     "vtk.js": "^17.9.0",
     "worker-loader": "^3.0.8",
