--- a/package.json
+++ b/package.json
@@ -11,6 +11,32 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
+    "@fontsource/roboto": "^4.5.1",
+    "@mui/material": "^5.0.3",
+    "@mui/styles": "^5.0.1",
+    "@mui/x-data-grid": "^5.0.0-beta.3",
+    "autoprefixer": "^10.3.7",
+    "cornerstone-core": "^2.6.0",
+    "cornerstone-math": "^0.1.9",
+    "cornerstone-tools": "^6.0.2",
+    "cornerstone-wado-image-loader": "^4.0.4",
+    "dicom-parser": "^1.8.11",
+    "dicomweb-client": "^0.8.2",
+    "gl-matrix": "3.4.3",
+    "hammerjs": "^2.0.8",
+    "react": "^17.0.2",
+    "react-cornerstone-viewport": "^4.1.2",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.0",
+    "react-vtkjs-viewport": "git+https://github.com/knopkem/react-vtkjs-viewport.git",
+    "shader-loader": "^1.3.1",
+    "vtk.js": "^20.0.0",
+    "worker-loader": "^3.0.8",
+    "wslink": "^1.0.7"
+  },
   "devDependencies": {
     "@babel/core": "^7.15.8",
     "@babel/plugin-external-helpers": "^7.14.5",
@@ -30,30 +56,5 @@
     "webpack": "^5.58.1",
     "webpack-cli": "^4.9.0",
     "webpack-dev-server": "^4.3.1"
-  },
-  "dependencies": {
-    "@fontsource/roboto": "^4.5.1",
-    "@material-ui/core": "^4.12.3",
-    "@material-ui/icons": "^4.11.2",
-    "@mui/x-data-grid": "^4.0.1",
-    "autoprefixer": "^10.3.7",
-    "cornerstone-core": "^2.6.0",
-    "cornerstone-math": "^0.1.9",
-    "cornerstone-tools": "^6.0.2",
-    "cornerstone-wado-image-loader": "^4.0.4",
-    "dicom-parser": "^1.8.11",
-    "dicomweb-client": "^0.8.2",
-    "gl-matrix": "3.4.3",
-    "hammerjs": "^2.0.8",
-    "normalize.css": "^8.0.1",
-    "react": "^17.0.2",
-    "react-cornerstone-viewport": "^4.1.2",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^5.3.0",
-    "react-vtkjs-viewport": "git+https://github.com/knopkem/react-vtkjs-viewport.git",
-    "shader-loader": "^1.3.1",
-    "vtk.js": "^20.0.0",
-    "worker-loader": "^3.0.8",
-    "wslink": "^1.0.7"
   }
 }
