--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,5 @@
 {
-  "extends": [
-    "react-app",
-    "eslint:recommended",
-    "plugin:react/recommended",
-    "plugin:prettier/recommended"
-  ],
+  "extends": ["react-app", "eslint:recommended", "plugin:react/recommended", "plugin:prettier/recommended"],
   "parser": "babel-eslint",
   "env": {
     "jest": true
