--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --mode production",
-    "start": "webpack serve"
+    "start": "webpack serve",
+    "format": "prettier --write ."
   },
   "keywords": [],
   "author": "",
@@ -45,14 +46,26 @@
     "@babel/preset-env": "^7.15.8",
     "@babel/preset-react": "^7.14.5",
     "@octokit/core": "^3.5.1",
+    "@types/babel__core": "^7.1.16",
+    "@types/babel__plugin-transform-runtime": "^7.9.2",
+    "@types/babel__preset-env": "^7.9.2",
+    "@types/file-loader": "^5.0.1",
+    "@types/hammerjs": "^2.0.40",
+    "@types/react": "^17.0.30",
+    "@types/react-dom": "^17.0.9",
+    "@types/react-router-dom": "^5.3.1",
+    "@types/webpack-dev-server": "^4.3.1",
     "babel-loader": "^8.2.2",
     "css-loader": "^6.4.0",
     "eslint-plugin-import": "^2.24.2",
     "file-loader": "^6.2.0",
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.2",
+    "prettier": "^2.4.1",
     "process": "^0.11.10",
     "style-loader": "^3.3.0",
+    "ts-migrate": "^0.1.26",
+    "typescript": "^4.4.4",
     "webpack": "^5.58.1",
     "webpack-cli": "^4.9.0",
     "webpack-dev-server": "^4.3.1"
