--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "dicomweb-frontend",
   "version": "0.1.0",
-  "repository": "knopkem/react-vtkjs-viewport",
+  "repository": "knopkem/dicomweb-frontend",
   "description": "",
-  "main": "index.js",
+  "main": "./dist/index.js",
   "scripts": {
     "build": "webpack --mode production",
     "start": "webpack serve",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "prepare": "types-sync"
   },
   "keywords": [],
   "author": "",
@@ -19,52 +20,34 @@
     "@mui/material": "^5.0.3",
     "@mui/styles": "^5.0.1",
     "@mui/x-data-grid": "^5.0.0-beta.3",
-    "autoprefixer": "^10.3.7",
     "cornerstone-core": "^2.6.0",
     "cornerstone-math": "^0.1.9",
     "cornerstone-tools": "^6.0.2",
     "cornerstone-wado-image-loader": "^4.0.4",
     "dicom-parser": "^1.8.11",
-    "dicomweb-client": "^0.8.2",
-    "gl-matrix": "3.4.3",
     "hammerjs": "^2.0.8",
     "react": "^17.0.2",
     "react-cornerstone-viewport": "^4.1.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^5.3.0",
-    "react-vtkjs-viewport": "git+https://github.com/knopkem/react-vtkjs-viewport.git",
-    "shader-loader": "^1.3.1",
-    "vtk.js": "^20.0.0",
-    "worker-loader": "^3.0.8",
-    "wslink": "^1.0.7"
+    "react-router-dom": "^5.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.15.8",
-    "@babel/plugin-external-helpers": "^7.14.5",
-    "@babel/plugin-proposal-class-properties": "^7.14.5",
-    "@babel/plugin-transform-runtime": "^7.15.8",
-    "@babel/preset-env": "^7.15.8",
-    "@babel/preset-react": "^7.14.5",
-    "@octokit/core": "^3.5.1",
-    "@types/babel__core": "^7.1.16",
-    "@types/babel__plugin-transform-runtime": "^7.9.2",
-    "@types/babel__preset-env": "^7.9.2",
-    "@types/file-loader": "^5.0.1",
     "@types/hammerjs": "^2.0.40",
+    "@types/html-webpack-plugin": "^3.2.6",
+    "@types/prettier": "^2.4.2",
     "@types/react": "^17.0.30",
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.3.1",
-    "@types/webpack-dev-server": "^4.3.1",
-    "babel-loader": "^8.2.2",
+    "@types/webpack": "^5.28.0",
+    "@types/webpack-dev-server": "^4.5.0",
     "css-loader": "^6.4.0",
-    "eslint-plugin-import": "^2.24.2",
-    "file-loader": "^6.2.0",
-    "html-loader": "^2.1.2",
+    "html-loader": "^3.0.1",
     "html-webpack-plugin": "^5.3.2",
     "prettier": "^2.4.1",
-    "process": "^0.11.10",
     "style-loader": "^3.3.0",
-    "ts-migrate": "^0.1.26",
+    "ts-loader": "^9.2.6",
+    "ts-node": "^10.4.0",
+    "types-sync": "^2.1.0",
     "typescript": "^4.4.4",
     "webpack": "^5.58.1",
     "webpack-cli": "^4.9.0",
