--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "@mui/material": "^5.0.3",
     "@mui/styles": "^5.0.1",
     "@mui/x-data-grid": "^5.0.0-beta.3",
+    "@types/lodash.get": "^4.4.6",
     "cornerstone-core": "^2.6.0",
     "cornerstone-math": "^0.1.9",
     "cornerstone-tools": "^6.0.2",
     "cornerstone-wado-image-loader": "^4.0.4",
     "dicom-parser": "^1.8.11",
     "hammerjs": "^2.0.8",
+    "lodash.get": "^4.4.2",
     "react": "^17.0.2",
     "react-cornerstone-viewport": "^4.1.2",
     "react-dom": "^17.0.2",
